stampForce/src/objects/Stampforce_User__c.object
<CustomObject>
    <description>Registered contacts for the stampforce app</description>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Authenticated_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email address</description>
        <inlineHelpText>Email address</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Firstname__c</fullName>
        <description>Users first name</description>
        <inlineHelpText>Users first name</inlineHelpText>
        <label>Firstname</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lastname__c</fullName>
        <description>Users last name</description>
        <inlineHelpText>Users last name</inlineHelpText>
        <label>Lastname</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Password for this user</description>
        <inlineHelpText>Password for this user</inlineHelpText>
        <label>Password</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone number</description>
        <inlineHelpText>Phone number</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>User</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Stampforce User</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SUID-{000000}</displayFormat>
        <label>Stampforce User Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stampforce Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>